--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
-/.DS_Store
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+
 /sc.mapbox-iphone-0.1.zip
-/build/*
+build/*
+/Mapbox.xcodeproj/project.xcworkspace/xcuserdata/timanrebel.xcuserdatad/UserInterfaceState.xcuserstate
